--- a/.env
+++ b/.env
@@ -1,4 +1,8 @@
 MONGO_URI=mongodb+srv://abdulhayevbahromjon2002:qarshiMed@cluster0.io1ywzt.mongodb.net/
+
+# test
+# MONGO_URI=mongodb+srv://abdulhayevbahromjon2002:bXyjYQ64jeSpUXmL@cluster0.j6reo.mongodb.net/
+
 JWT_SECRET_KEY=QarshiMEdBalNitsa
 
 IMGBB_URL=https://api.imgbb.com/1/upload
