--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-MONGO_URI=mongodb+srv://abdulhayevbahromjon2002:qarshiMed@cluster0.io1ywzt.mongodb.net/
+# MONGO_URI=mongodb+srv://abdulhayevbahromjon2002:qarshiMed@cluster0.io1ywzt.mongodb.net/
 
 # test
-# MONGO_URI=mongodb+srv://abdulhayevbahromjon2002:bXyjYQ64jeSpUXmL@cluster0.j6reo.mongodb.net/
+MONGO_URI=mongodb+srv://abdulhayevbahromjon2002:bXyjYQ64jeSpUXmL@cluster0.j6reo.mongodb.net/
 
 JWT_SECRET_KEY=QarshiMEdBalNitsa
 
